# cyrus-imsp-server

./: Makefile.in  README  acconfig.h  aclocal.m4  config.h.in  configure  configure.in
imsp/: Makefile.in  abook.c  abook.h  abook_ldap.c  abook_ldap.h  adate.c  alock.c  alock.h  authize.c  authize.h  bb.c  bb.h  dispatch.c  dispatch.h  im_util.c  im_util.h  imap_client.c  imap_client.h  imsp.h  imsp_server.c  imsp_server.h  login_krb.c  login_unix.c  login_unix_shadow.c  main.c  option.c  option.h  options.sample  proxy_krb.c  proxy_unix_shadow.c  sasl_support.c  sasl_support.h  syncdb.c  syncdb.h  version.h
lib/: Makefile.in  acl.c  acl_afs.c  acte_krb.c  assert.c  assert.h  auth.h  auth_krb.c  auth_krb_pts.c  auth_krb_pts.h  auth_trivial.c  auth_unix.c  bsearch.c  bsearch.h  charset.c  charset.h  exitcodes.h  ftruncate.c  gai.h  getaddrinfo.c  getdtablesize.c  getnameinfo.c  glob.c  glob.h  gmtoff.h  gmtoff_gmtime.c  gmtoff_tm.c  imclient.c  imclient.h  imparse.c  imparse.h  iptostring.c  iptostring.h  is.c  lock.h  lock_fcntl.c  lock_flock.c  map.h  map_nommap.c  map_private.c  (+24 more)
notes/: Build-instructions  Changes-Todo  Setup-instructions  imsp.implementation  imsp.implementation.updates  option.registry
